--- a/sites/all/themes/cas/sass/_responsive.scss
+++ b/sites/all/themes/cas/sass/_responsive.scss
@@ -755,22 +755,19 @@ screen and (max-height:580px)
 
     #kids-zone-banner
     {
-        height:300px;
-
-        & > div
-        {
-            background-size: cover;
-        }
 
         a.tw
         {
-            top:215px;
-            left:75px;
+            height:45px;
+            background-size:contain;
+            left:10%;
         }
         a.go-explore
         {
-            top:215px;
-            left:150px;
+            height:45px;
+            background-size:contain;
+            left:10%;
+            margin-left:50px;
         }
     }
 
@@ -905,26 +902,6 @@ screen and (max-height:580px)
         }
     }
 
-    #kids-zone-banner
-    {
-        height:220px;
-
-        a.tw
-        {
-            top:160px;
-            left:60px;
-            height:45px;
-            background-size:contain;
-        }
-        a.go-explore
-        {
-            top:160px;
-            left: 110px;
-            height:45px;
-            background-size:contain;
-        }
-    }
-
     #top #block-menu-menu-social-menu
     {
         display: none;
@@ -939,6 +916,16 @@ screen and (max-height:580px)
     #block-views-news-and-events-block .views-row
     {
         width: auto;
+    }
+
+    #kids-zone-banner
+    {
+        a.tw,
+        a.go-explore
+        {
+            bottom:0;
+            top:auto;
+        }
     }
 }
 
@@ -964,6 +951,38 @@ screen and (max-height:580px)
         font-size:1em;
     }
 }
+
+
+@media screen and (max-width:320px)
+{
+    #kids-zone-banner
+    {
+        height:220px;
+        padding-top:0;
+
+        & > div
+        {
+            background-size:cover;
+        }
+
+        a.tw
+        {
+            top:160px;
+            left:60px;
+            height:45px;
+            background-size:contain;
+        }
+        a.go-explore
+        {
+            top:160px;
+            left: 110px;
+            height:45px;
+            background-size:contain;
+            margin-left:0;
+        }
+    }
+}
+
 
 
 
